# suex

./: .bumpversion.cfg  .envrc  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  entrypoint.sh  runas.conf.example  snapcraft
.copr/: Makefile  suex.spec
cmake/: cotire.cmake
doc/: EXAMPLES.md  FAQ.md  TODO.md  doas.conf.example  suex.conf
include/: actions.h  actions.hpp  auth.h  conf.h  conf.hpp  env.h  env.hpp  exceptions.h  exceptions.hpp  file.h  file.hpp  fmt.hpp  logger.h  logger.hpp  optarg.h  optarg.hpp  options.h  path.h  path.hpp  perm.h  perm.hpp  rx.h  rx.hpp  utils.h  utils.hpp  version.h  version.hpp
man/: doas.conf.md  doas.md  suex.conf.md  suex.md
openbsd/: Makefile  README  doas.1  doas.c  doas.conf.5  doas.h  env.c  parse.y
src/: actions.cpp  auth.cpp  conf.cpp  doas.cpp  env.cpp  file.cpp  logger.cpp  optarg.cpp  options.cpp  path.cpp  perm.cpp  runas.cpp  rx.cpp  suex.cpp  utils.cpp
tools/: build  chperm  clean  clean-tokens  distclean  docker-build  format-all  install  lint  package  rebuild  reinstall  secure  update
tools/git-hooks/: pre-commit
